syntax = "proto3";
package madeinblock.slashrefund.slashrefund;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "slashrefund/slashrefund.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/made-in-block/slash-refund/x/slashrefund/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/params";
  }
  // Queries a Deposit by index.
	rpc Deposit(QueryGetDepositRequest) returns (QueryGetDepositResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/deposit/{depositorAddress}/{validatorAddress}";
	}

	// Queries a list of Deposit items.
	rpc DepositAll(QueryAllDepositRequest) returns (QueryAllDepositResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/deposit";
	}

// Queries a DepositPool by index.
	rpc DepositPool(QueryGetDepositPoolRequest) returns (QueryGetDepositPoolResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/deposit_pool/{operatorAddress}";
    }

	// Queries a list of DepositPool items.
	rpc DepositPoolAll(QueryAllDepositPoolRequest) returns (QueryAllDepositPoolResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/deposit_pool";
	}

// Queries a UnbondingDeposit by index.
	rpc UnbondingDeposit(QueryGetUnbondingDepositRequest) returns (QueryGetUnbondingDepositResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/unbonding_deposit/{depositorAddress}/{validatorAddress}";
	}

	// Queries a list of UnbondingDeposit items.
	rpc UnbondingDepositAll(QueryAllUnbondingDepositRequest) returns (QueryAllUnbondingDepositResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/unbonding_deposit";
	}

// Queries a RefundPool by index.
	rpc RefundPool(QueryGetRefundPoolRequest) returns (QueryGetRefundPoolResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/refund_pool/{operatorAddress}";
	}

	// Queries a list of RefundPool items.
	rpc RefundPoolAll(QueryAllRefundPoolRequest) returns (QueryAllRefundPoolResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/refund_pool";
	}

// Queries a Refund by index.
	rpc Refund(QueryGetRefundRequest) returns (QueryGetRefundResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/refund/{delegator}/{validator}";
	}

	// Queries a list of Refund items.
	rpc RefundAll(QueryAllRefundRequest) returns (QueryAllRefundResponse) {
		option (google.api.http).get = "/made-in-block/slash-refund/slashrefund/refund";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDepositRequest {
  string depositorAddress = 1;
  string validatorAddress = 2;

}

message QueryGetDepositResponse {
	Deposit deposit = 1 [(gogoproto.nullable) = false];
}

message QueryAllDepositRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDepositResponse {
	repeated Deposit deposit = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetDepositPoolRequest {
	  string operatorAddress = 1;

}

message QueryGetDepositPoolResponse {
	DepositPool depositPool = 1 [(gogoproto.nullable) = false];
}

message QueryAllDepositPoolRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDepositPoolResponse {
	repeated DepositPool depositPool = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetUnbondingDepositRequest {
	  string depositorAddress = 1;
  string validatorAddress = 2;

}

message QueryGetUnbondingDepositResponse {
	UnbondingDeposit unbondingDeposit = 1 [(gogoproto.nullable) = false];
}

message QueryAllUnbondingDepositRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllUnbondingDepositResponse {
	repeated UnbondingDeposit unbondingDeposit = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetRefundPoolRequest {
	  string operatorAddress = 1;

}

message QueryGetRefundPoolResponse {
	RefundPool refundPool = 1 [(gogoproto.nullable) = false];
}

message QueryAllRefundPoolRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRefundPoolResponse {
	repeated RefundPool refundPool = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetRefundRequest {
	string delegator = 1;
  	string validator = 2;

}

message QueryGetRefundResponse {
	Refund refund = 1 [(gogoproto.nullable) = false];
}

message QueryAllRefundRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRefundResponse {
	repeated Refund refund = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
